Fix twitter scrollbar

--- a/user-scripts/@modules/modules/twitter-and-mobile/main.css
+++ b/user-scripts/@modules/modules/twitter-and-mobile/main.css
@@ -29,6 +29,12 @@
 
 /* Scrollbar */
 
+:root, * {
+  scrollbar-width: auto !important;
+  scrollbar-color: auto !important;
+  scrollbar-gutter: auto !important;
+}
+
 
 :root {
   --scrollbar-width:  10px;
